# app/Http/Controllers/CurrencyConvertController.php
@@ -21,59 +21,71 @@ class CurrencyConvertController extends Controller
 
 
     /**
- * @OA\Post(
- *     path="/api/currencyconvert",
- *     summary="Convert currency from one type to another",
- *     tags={"Currency"},
- *     @OA\RequestBody(
- *         @OA\MediaType(
- *             mediaType="application/x-www-form-urlencoded",
- *             @OA\Schema(
- *                 @OA\Property(property="from", type="string", description="Base currency code", example="USD"),
- *                 @OA\Property(property="to", type="string", description="Target currency code", example="EUR"),
- *                 @OA\Property(property="amount", type="number", description="Amount to be converted", example=100.0),
- *                 example={
- *                     "from": "USD",
- *                     "to": "EUR",
- *                     "amount": 100.0
- *                 }
- *             )
- *         )
- *     ),
- *     @OA\Response(
- *         response=200,
- *         description="Successful currency conversion",
- *         @OA\JsonContent(
- *             @OA\Property(property="success", type="boolean", example=true),
- *             @OA\Property(property="result", type="number", example=84.75),
- *             @OA\Examples(example="result", value={"success": true, "result": 84.75}, summary="Conversion result.")
- *         )
- *     ),
- *     @OA\Response(
- *         response=422,
- *         description="Validation error",
- *         @OA\JsonContent(
- *             @OA\Property(property="success", type="boolean", example=false),
- *             @OA\Property(property="message", type="string", example="The from field is required."),
- *             @OA\Examples(example="validation_error", value={"success": false, "message": "The from field is required."}, summary="Validation error.")
- *         )
- *     ),
- *     @OA\Response(
- *         response=500,
- *         description="Internal server error",
- *         @OA\JsonContent(
- *             @OA\Property(property="success", type="boolean", example=false),
- *             @OA\Property(property="message", type="string", example="Currency conversion API request failed."),
- *             @OA\Examples(example="server_error", value={"success": false, "message": "Currency conversion API request failed."}, summary="Internal server error.")
- *         )
- *     )
- * )
- */
+     * @OA\Get(
+     *     path="/api/currencyconvert/{to}/{from}/{amount}",
+     *     summary="Convert currency from one type to another",
+     *     tags={"Currency Conversion"},
+     *     @OA\Parameter(
+     *         name="to",
+     *         in="path",
+     *         description="Currency code to convert to (e.g. USD)",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="USD"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="from",
+     *         in="path",
+     *         description="Currency code to convert from (e.g. EUR)",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="string",
+     *             example="EUR"
+     *         )
+     *     ),
+     *     @OA\Parameter(
+     *         name="amount",
+     *         in="path",
+     *         description="Amount to be converted",
+     *         required=true,
+     *         @OA\Schema(
+     *             type="number",
+     *             format="float",
+     *             example=100
+     *         )
+     *     ),
+    *     @OA\Response(
+    *         response=200,
+    *         description="Successful currency conversion",
+    *         @OA\JsonContent(
+    *             @OA\Property(property="success", type="boolean", example=true),
+    *             @OA\Property(property="result", type="number", example=84.75),
+    *             @OA\Examples(example="result", value={"success": true, "result": 84.75}, summary="Conversion result.")
+    *         )
+    *     ),
+     *     @OA\Response(
+     *         response=400,
+     *         description="Bad request or validation error",
+     *         @OA\JsonContent(
+     *             @OA\Property(property="success", type="boolean", example=false),
+     *             @OA\Property(property="message", type="string", example="Invalid currency code")
+     *         )
+     *     )
+     * )
+     */
 
-    public function convert(ConvertRequest $request){
+    public function convert($to, $from, $amount){
 
 
-       $validatedData =  $request->validated();
+       //$validatedData =  $request->validated();
+
+       $validatedData = [
+            "to" => $to,
+            "from" => $from,
+            "amount" => $amount
+       ];
 
        $result = $this->currencyConverterService->convert($validatedData);
 
